src/components/MentorsList/MentorList.css
@media all and (max-width: 575.98px) {
  main {
    flex-direction: column;
  }
  .mentors-wrapper {
    position: relative;
    background: #fff;
    transform: translateY(0);
    transition: transform 0.3s ease;
  }
  .mentors-wrapper.active {
    transform: translateY(190px);
    margin-bottom: 50px;
  }
}

@media all and (min-width: 576px) {
  .mentors-wrapper {
    padding-bottom: 30px;
    margin-left: 276px;
    flex-grow: 1;
  }
  .mentors-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    overflow-y: auto;
    margin-top: 100px;
  }
}

.nothing-to-show {
  font-size: 20px;
  line-height: 1.6;
}

